--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Token Maker</title>
     <style>
+        body { font-family: Verdana, sans-serif }
         .token-container>div {
             display: inline-grid;
         }
+        #settings {
+            display: grid;
+        }
+        input, select {
+            margin-bottom: 10px;
+        }
+
     </style>
 </head>
 
